# DEHAME_GREGORY_Projets-Films

./: .gitignore  README.md  app.py  base_de_donnees.db  helper.py  pyproject.toml  run.bat  sql.py
blueprints/: films.py
static/css/: addFilm.css  base.css  editFilm.css  film.css  films.css  home.css
templates/: 404.html  addFilm.jinja  editFilm.jinja  film.jinja  films.jinja  index.jinja
templates/socle/: base.jinja
