[tool.poetry]
name = "tp"
version = "0.1.0"
description = ""
authors = ["Grégory DEHAME <gregorydehame@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "~2.2.2"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
